Standarize messaging tool in a wrapper

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -5,10 +5,10 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="navbar-nav navbar-nav-scroll mx-lg-auto gap-md-4 gap-lg-5 px-2">
-                <li class="nav-item"><a class="nav-link active" href="/">{navbar-home}</a></li>
-                <li class="nav-item"><a class="nav-link" href="properties.html">{navbar-property}</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">{navbar-about}</a></li>
-            </ul><a class="btn btn-primary link-light my-4 my-md-0" role="button" href="contact.html">{navbar-contact}</a>
+                <li class="nav-item"><a class="nav-link active" href="/">{map.navbar-home}</a></li>
+                <li class="nav-item"><a class="nav-link" href="properties.html">{map.navbar-property}</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">{map.navbar-about}</a></li>
+            </ul><a class="btn btn-primary link-light my-4 my-md-0" role="button" href="contact.html">{map.navbar-contact}</a>
         </div>
     </div>
 </nav>
