--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,66 +1,44 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>main</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/generic/cards.css">
-    <link rel="stylesheet" href="assets/css/generic/fields.css">
-    <link rel="stylesheet" href="assets/css/generic/general.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="assets/css/navbar.css">
-    <link rel="stylesheet" href="assets/css/scss/custom-colors.compiled.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <footer>
-        <div class="bg-primary py-2">
-            <div class="container p-4">
-                <div class="row row-cols-1 row-cols-md-3">
-                    <div class="col align-self-center">
-                        <figure>
-                            <blockquote class="blockquote">
-                                <p class="text-white-50">Hier könnte ihre Werbung oder unser Impressum stehen:</p>
-                            </blockquote>
-                            <figcaption class="blockquote-footer">Someone famous<small class="text-white-50 d-block">Musterstraße 123</small><small class="text-white-50 d-block">48235 Musterhausen</small><small class="text-white-50 d-block">Tel: 012345566</small><small class="text-white-50 d-block">E-Mail: mustermann@aurorainteractive.com</small></figcaption>
-                        </figure>
+<div class="bg-primary py-2">
+    <div class="container p-4">
+        <div class="row row-cols-1 row-cols-md-3">
+            <div class="col align-self-center">
+                <figure>
+                    <blockquote class="blockquote">
+                        <p class="text-white-50">Hier könnte ihre Werbung oder unser Impressum stehen:</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">Someone famous<small
+                            class="text-white-50 d-block">Musterstraße 123</small><small
+                            class="text-white-50 d-block">48235 Musterhausen</small><small
+                            class="text-white-50 d-block">Tel: 012345566</small><small
+                            class="text-white-50 d-block">E-Mail: mustermann@aurorainteractive.com</small></figcaption>
+                </figure>
+            </div>
+            <div class="col text-center d-flex flex-column justify-content-center align-items-center"
+                style="border-right: 1px solid var(--bs-light);border-left: 1px solid var(--bs-light);border-radius: 20px;">
+                <h5 class="text-uppercase text-white-50 my-4 fw-bold">Síguenos en las redes</h5>
+                <div><a class="border rounded-circle d-inline-block m-2 p-2" href="#"
+                        style="width: 50px;height: 50px;"><i class="fab fa-whatsapp social-icon"
+                            style="color: var(--bs-teal);"></i></a><a
+                        class="border rounded-circle d-inline-block m-2 p-2" href="#"
+                        style="width: 50px;height: 50px;"><i class="fab fa-instagram social-icon"
+                            style="color: var(--bs-pink);"></i></a><a
+                        class="border rounded-circle d-inline-block m-2 p-2" href="#"
+                        style="width: 50px;height: 50px;"><i class="fab fa-facebook-f social-icon"
+                            style="color: var(--bs-blue);"></i></a></div>
+            </div>
+            <div class="col">
+                <nav class="navbar navbar-dark text-center">
+                    <div class="container-fluid">
+                        <ul class="navbar-nav w-100">
+                            <li class="nav-item"><a class="nav-link active" href="footer.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="admin.html">Propiedades</a></li>
+                            <li class="nav-item"><a class="nav-link" href="navbar.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="search.html">Contacto</a></li>
+                        </ul>
                     </div>
-                    <div class="col text-center d-flex flex-column justify-content-center align-items-center" style="border-right: 1px solid var(--bs-light);border-left: 1px solid var(--bs-light);border-radius: 20px;">
-                        <h5 class="text-uppercase text-white-50 my-4 fw-bold">Síguenos en las redes</h5>
-                        <div><a class="border rounded-circle d-inline-block m-2 p-2" href="#" style="width: 50px;height: 50px;"><i class="fab fa-whatsapp social-icon" style="color: var(--bs-teal);"></i></a><a class="border rounded-circle d-inline-block m-2 p-2" href="#" style="width: 50px;height: 50px;"><i class="fab fa-instagram social-icon" style="color: var(--bs-pink);"></i></a><a class="border rounded-circle d-inline-block m-2 p-2" href="#" style="width: 50px;height: 50px;"><i class="fab fa-facebook-f social-icon" style="color: var(--bs-blue);"></i></a></div>
-                    </div>
-                    <div class="col">
-                        <nav class="navbar navbar-dark text-center">
-                            <div class="container-fluid">
-                                <ul class="navbar-nav w-100">
-                                    <li class="nav-item"><a class="nav-link active" href="footer.html">Inicio</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="admin.html">Propiedades</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="navbar.html">Nosotros</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="search.html">Contacto</a></li>
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
-                </div>
+                </nav>
             </div>
         </div>
-        <div class="text-center text-white-50 bg-dark p-4"><small>@2021 Copyright:&nbsp;ROMSAL SRL</small></div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="assets/js/formatter/currency.js"></script>
-    <script src="assets/js/moving-letters.js"></script>
-</body>
-
-</html>
+    </div>
+</div>
+<div class="text-center text-white-50 bg-dark p-4"><small>@2021 Copyright:&nbsp;ROMSAL SRL</small></div>
