--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -224,7 +224,7 @@
             </section>
         </div>
     </main>
-    <footer></footer>
+    <footer>{#include footer/}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
