--- a/src/main/resources/META-INF/resources/assets/css/contact.css
+++ b/src/main/resources/META-INF/resources/assets/css/contact.css
@@ -30,11 +30,7 @@ textarea {
   border-bottom: 2px solid silver;
 }
 
-.locations > div {
-  display: inline-block;
-}
-
-.locations div:hover {
+.locations .col div:hover {
   background: #f1f1f1;
 }
 
