--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,14 +1,17 @@
-<nav class="navbar navbar-light navbar-expand-md text-uppercase text-center">
-    <div class="container"><a class="navbar-brand font-monospace text-start" href="/"><img src="assets/img/logo.jpg"
-                height="75px"></a><button data-bs-toggle="collapse" class="navbar-toggler"
-            data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span
-                class="navbar-toggler-icon"></span></button>
+<nav class="navbar navbar-light navbar-expand-lg text-uppercase text-center">
+    <div class="container"><a class="navbar-brand" href="/"><img
+                src="assets/img/logo.jpg?h=8a706d21955efea0829ccd73963400f2" height="75px"></a><button
+            data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
+                class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav navbar-nav-scroll mx-lg-auto gap-md-4 gap-lg-5 px-2">
-                <li class="nav-item"><a class="nav-link active" href="/">{map.navbar-home}</a></li>
-                <li class="nav-item"><a class="nav-link" href="properties.html">{map.navbar-property}</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">{map.navbar-about}</a></li>
-            </ul><a class="btn btn-primary link-light my-4 my-md-0" role="button" href="contact.html">{map.navbar-contact}</a>
+            <ul class="navbar-nav navbar-nav-scroll mx-lg-auto gap-1 gap-lg-5 px-2">
+                <li class="nav-item"><a class="nav-link active px-4" href="/" style="border-radius: 4px;">Inicio</a>
+                </li>
+                <li class="nav-item"><a class="nav-link px-4" href="properties.html"
+                        style="border-radius: 4px;">Propiedades</a></li>
+                <li class="nav-item"><a class="nav-link px-4" href="about.html" style="border-radius: 4px;">Nosotros</a>
+                </li>
+            </ul><a class="btn btn-primary link-light my-4 my-lg-0" role="button" href="contact.html">Contáctanos</a>
         </div>
     </div>
 </nav>
