--- a/src/main/resources/META-INF/resources/assets/css/about.css
+++ b/src/main/resources/META-INF/resources/assets/css/about.css
@@ -1,73 +1,14 @@
 .team-boxed {
-  color: #313437;
   background-color: #eef4f7;
 }
 
-.team-boxed p {
+.team-boxed .title {
+  letter-spacing: 2px;
+  font-size: 13px;
   color: #7d8285;
 }
 
-.team-boxed h2 {
-  font-weight: bold;
-  margin-bottom: 40px;
-  padding-top: 40px;
-}
-
-@media (max-width:767px) {
-  .team-boxed h2 {
-    margin-bottom: 25px;
-    padding-top: 25px;
-    font-size: 24px;
-  }
-}
-
-.team-boxed .intro {
-  font-size: 16px;
-  max-width: 500px;
-  margin: 0 auto;
-}
-
-.team-boxed .intro p {
-  margin-bottom: 0;
-}
-
-.team-boxed .people {
-  padding: 50px 0;
-}
-
-.team-boxed .item {
-  text-align: center;
-}
-
-.team-boxed .item .box {
-  text-align: center;
-  padding: 30px;
-  background-color: #fff;
-  margin-bottom: 30px;
-}
-
-.team-boxed .item .name {
-  font-weight: bold;
-  margin-top: 28px;
-  margin-bottom: 8px;
-  color: inherit;
-}
-
-.team-boxed .item .title {
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #d0d0d0;
-  letter-spacing: 2px;
-  font-size: 13px;
-}
-
-.team-boxed .item .description {
-  font-size: 15px;
-  margin-top: 15px;
-  margin-bottom: 20px;
-}
-
-.team-boxed .item img {
+.team-boxed img {
   max-width: 160px;
 }
 
@@ -77,6 +18,8 @@
 }
 
 .team-boxed .social a {
+  font-size: 18px;
+  color: #a2a8ae;
   color: inherit;
   margin: 0 10px;
   display: inline-block;
