--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>contact</title>
+    <title>main</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="assets/css/generic/highlight.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="assets/css/login.css">
     <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/css/scss/custom-colors.compiled.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,9 +25,7 @@
 </head>
 
 <body>
-    <header>
-        {#include navbar}ERROR{/}
-    </header>
+    <header></header>
     <main>
         <section class="highlight">
             <div class="container">
@@ -38,22 +35,22 @@
         </section>
         <div class="wrapper">
             <div class="container-fluid border rounded-0 shadow contact-form">
-                <form class="p-5">
+                <form class="p-5" method="post">
                     <div class="row row-cols-1 row-cols-md-2">
                         <div class="col">
                             <div class="row row-cols-1 gap-4">
                                 <div class="col">
-                                    <div class="form-floating input-data"><input class="form-control" type="text" id="name" name="name" placeholder="Tu nombre"><label class="form-label" for="name">Nombre</label></div>
+                                    <div class="form-floating input-data"><input class="form-control" type="text" id="name" name="name" placeholder="Nombre"><label class="form-label" for="name">Nombre</label></div>
                                 </div>
                                 <div class="col">
-                                    <div class="form-floating input-data"><input class="form-control" type="tel" id="telephone" placeholder="(809) 580 - 1111" name="telephone"><label class="form-label" for="telephone">Numero telefonico</label></div>
+                                    <div class="form-floating input-data"><input class="form-control" type="tel" id="telephone" placeholder="Número telefónico" name="telephone"><label class="form-label" for="telephone">Número telefónico</label></div>
                                 </div>
                                 <div class="col">
-                                    <div class="form-floating input-data"><input class="form-control" type="email" id="email" name="email" placeholder="name@example.com"><label class="form-label" for="email">Correo electronico</label></div>
+                                    <div class="form-floating input-data"><input class="form-control" type="email" id="email" name="email" placeholder="Correo electrónico"><label class="form-label" for="email">Correo electrónico</label></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col mt-4 mt-md-0"><textarea class="form-control" placeholder="Mensaje" style="height: 92%;" rows="5"></textarea>
+                        <div class="col mt-4 mt-md-0"><textarea class="form-control" placeholder="Mensaje" style="height: 92%;" rows="5" name="message"></textarea>
                             <hr>
                         </div>
                     </div>
@@ -67,26 +64,33 @@
         <div class="container mt-5 mb-4">
             <section>
                 <h2 class="section-title">Información de contacto<br><br></h2>
-                <div class="row g-0 locations">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 locations gy-4">
                     <div class="col">
-                        <div class="border rounded-0 shadow-sm p-4">
+                        <div class="border rounded-0 shadow-sm d-flex flex-column p-4 w-100 h-100">
                             <h5>Santiago de los Caballeros</h5>
-                            <p style="font-weight: bold;"><strong>C/ Parada Vieja, Res. María Alejandra I 2do Nivel</strong><br></p><span style="font-weight: bold;"><strong>+56 2 2897 9190</strong><br><br></span>
+                            <p class="flex-grow-1"><strong>C/ Parada Vieja, Res. María Alejandra I 2do Nivel</strong><br></p><span class="fw-bold"><strong>(809) 820 - 0897</strong><br></span>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="border rounded-0 shadow-sm d-flex flex-column p-4 w-100 h-100">
+                            <h5>Santiago de los Caballeros</h5>
+                            <p class="flex-grow-1"><strong>C/ Parada Vieja, Res.</strong><br></p><span class="fw-bold"><strong>(809) 820 - 0897</strong><br></span>
                         </div>
                     </div>
                 </div>
             </section>
         </div>
-        <section class="map"><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDmO0JHOHAXY2C3Ud49KbMSwFf3APep1Ow&amp;q=Paris%2C+France&amp;zoom=11" class="map" width="100%" height="400"></iframe></section>
+        <section>
+            <div id="map" class="w-100" style="height: 400px;"></div>
+        </section>
     </main>
     <footer></footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="assets/js/contact.js"></script>
     <script src="assets/js/formatter/currency.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script src="assets/js/moving-letters.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmO0JHOHAXY2C3Ud49KbMSwFf3APep1Ow&amp;region=DO&amp;language=es&amp;callback=initMap"></script>
 </body>
 
 </html>
