--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,31 +9,31 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/generic/cards.css">
-    <link rel="stylesheet" href="assets/css/generic/fields.css">
-    <link rel="stylesheet" href="assets/css/generic/general.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=28fcdefe8a87593f1f43b7d9951e0cba">
+    <link rel="stylesheet" href="assets/css/footer.css?h=e9b0850f22ad51fa74cf747a2998f8eb">
+    <link rel="stylesheet" href="assets/css/generic/cards.css?h=c1366984cb203dab7a99a26489902cee">
+    <link rel="stylesheet" href="assets/css/generic/fields.css?h=a3fd52f6785712ad3201dc899f0c34be">
+    <link rel="stylesheet" href="assets/css/generic/general.css?h=44dcaaed3318fe53593506dc316bb184">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/navbar.css">
-    <link rel="stylesheet" href="assets/css/scss/custom-colors.compiled.css">
+    <link rel="stylesheet" href="assets/css/index.css?h=89a60ee041b87dc48d5cce8500b11dcd">
+    <link rel="stylesheet" href="assets/css/navbar.css?h=577b20b93b5424a25761882d234f6cc4">
+    <link rel="stylesheet" href="assets/css/scss/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header></header>
+    <header>{#include navbar/}</header>
     <main>
         <div class="card slider overflow-hidden border-0">
             <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false" data-bs-keyboard="false" id="carousel-1">
                 <div class="carousel-inner">
-                    <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/slider/1.jpg" alt="Slide Image"></div>
-                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/2.jpg" alt="Slide Image"></div>
-                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/3.jpg" alt="Slide Image"></div>
-                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/4.jpg" alt="Slide Image"></div>
-                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/5.jpg" alt="Slide Image"></div>
+                    <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/slider/1.jpg?h=a274f1de840f3e792ed57f5308b992ec" alt="Slide Image"></div>
+                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/2.jpg?h=bc3c7017bfffb4fe391f3113e83cb031" alt="Slide Image"></div>
+                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/3.jpg?h=c246b393697337d0b39c649e4c9d201f" alt="Slide Image"></div>
+                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/4.jpg?h=19754de6ce93c6ba0e6dd123a278dd31" alt="Slide Image"></div>
+                    <div class="carousel-item"><img class="w-100 d-block" src="assets/img/slider/5.jpg?h=285358419a670a96c233041893de6bf6" alt="Slide Image"></div>
                 </div>
                 <div class="visually-hidden"><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
             </div>
@@ -209,7 +209,7 @@
                 <div class="mb-4">
                     <h2 class="section-title">Servicios</h2>
                 </div>
-                <div class="row row-cols-1 row-cols-md-3">
+                <div class="row row-cols-1 row-cols-md-3" data-aos="flip-up">
                     <div class="col"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-percentage fa-stack-1x fa-inverse"></i> </span>
                         <h4>Renta de propiedades</h4>
                         <p class="text-muted">Desde apartamentos, módulos de oficinas a almacenes, con nosotros puedes encontrar el espacio adecuado para ti o tu empresa<br></p>
@@ -226,14 +226,14 @@
             </section>
         </div>
     </main>
-    <footer></footer>
+    <footer>{#include footer/}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/bs-init.js?h=1ff0a0bc7fcdd630c8e66c639cd2fc11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="assets/js/formatter/currency.js"></script>
-    <script src="assets/js/home.js"></script>
+    <script src="assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
+    <script src="assets/js/home.js?h=d203cc19e736aa3769de7c8f4ed6c62c"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script src="assets/js/moving-letters.js"></script>
+    <script src="assets/js/moving-letters.js?h=456321e0776af8b865cae6ae4d5d2ae5"></script>
 </body>
 
 </html>
