--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -6,20 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>main</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/contact.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/generic/cards.css">
-    <link rel="stylesheet" href="assets/css/generic/fields.css">
-    <link rel="stylesheet" href="assets/css/generic/general.css">
-    <link rel="stylesheet" href="assets/css/generic/highlight.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="assets/css/navbar.css">
-    <link rel="stylesheet" href="assets/css/scss/custom-colors.compiled.css">
+    <link rel="stylesheet" href="assets/css/contact.css?h=4f713701a6cfcc9d5d5b2770e610078c">
+    <link rel="stylesheet" href="assets/css/footer.css?h=e9b0850f22ad51fa74cf747a2998f8eb">
+    <link rel="stylesheet" href="assets/css/generic/cards.css?h=c1366984cb203dab7a99a26489902cee">
+    <link rel="stylesheet" href="assets/css/generic/fields.css?h=a3fd52f6785712ad3201dc899f0c34be">
+    <link rel="stylesheet" href="assets/css/generic/general.css?h=44dcaaed3318fe53593506dc316bb184">
+    <link rel="stylesheet" href="assets/css/generic/highlight.css?h=de10cb38c5475825bbac2117f770edd0">
+    <link rel="stylesheet" href="assets/css/navbar.css?h=577b20b93b5424a25761882d234f6cc4">
+    <link rel="stylesheet" href="assets/css/scss/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
 </head>
@@ -65,18 +59,14 @@
             <section>
                 <h2 class="section-title">Información de contacto<br><br></h2>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 locations gy-4">
+                    {#for contact in map.contacts}
                     <div class="col">
                         <div class="border rounded-0 shadow-sm d-flex flex-column p-4 w-100 h-100">
-                            <h5>Santiago de los Caballeros</h5>
-                            <p class="flex-grow-1"><strong>C/ Parada Vieja, Res. María Alejandra I 2do Nivel</strong><br></p><span class="fw-bold"><strong>(809) 820 - 0897</strong><br></span>
+                            <h5>{contact.city}</h5>
+                            <p class="flex-grow-1"><strong>{contact.address}</strong><br></p><span class="fw-bold"><strong>{contact.phone}</strong><br></span>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="border rounded-0 shadow-sm d-flex flex-column p-4 w-100 h-100">
-                            <h5>Santiago de los Caballeros</h5>
-                            <p class="flex-grow-1"><strong>C/ Parada Vieja, Res.</strong><br></p><span class="fw-bold"><strong>(809) 820 - 0897</strong><br></span>
-                        </div>
-                    </div>
+                    {/for}
                 </div>
             </section>
         </div>
@@ -86,10 +76,8 @@
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="assets/js/contact.js"></script>
-    <script src="assets/js/formatter/currency.js"></script>
+    <script src="assets/js/contact.js?h=c0074dffcb92277735a4d6abf983c59d"></script>
+    <script src="assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmO0JHOHAXY2C3Ud49KbMSwFf3APep1Ow&amp;region=DO&amp;language=es&amp;callback=initMap"></script>
 </body>
 
