--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>contact</title>
+    <title>main</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="../assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="../assets/css/footer.css">
-    <link rel="stylesheet" href="../assets/css/generic/cards.css">
-    <link rel="stylesheet" href="../assets/css/generic/fields.css">
-    <link rel="stylesheet" href="../assets/css/generic/general.css">
-    <link rel="stylesheet" href="../assets/css/generic/highlight.css">
+    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css?h=28fcdefe8a87593f1f43b7d9951e0cba">
+    <link rel="stylesheet" href="/assets/css/footer.css?h=e9b0850f22ad51fa74cf747a2998f8eb">
+    <link rel="stylesheet" href="/assets/css/generic/cards.css?h=79e031c7500cf56655017d8aec0a455f">
+    <link rel="stylesheet" href="/assets/css/generic/fields.css?h=a3fd52f6785712ad3201dc899f0c34be">
+    <link rel="stylesheet" href="/assets/css/generic/general.css?h=44dcaaed3318fe53593506dc316bb184">
+    <link rel="stylesheet" href="/assets/css/generic/highlight.css?h=de10cb38c5475825bbac2117f770edd0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="../assets/css/login.css">
-    <link rel="stylesheet" href="../assets/css/navbar.css">
-    <link rel="stylesheet" href="../assets/css/property/properties.css">
-    <link rel="stylesheet" href="../assets/css/scss/custom-colors.compiled.css">
+    <link rel="stylesheet" href="/assets/css/navbar.css?h=577b20b93b5424a25761882d234f6cc4">
+    <link rel="stylesheet" href="/assets/css/property/properties.css?h=62f164858d2abecb9ad3896c38d47c65">
+    <link rel="stylesheet" href="/assets/css/scss/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
 </head>
@@ -28,7 +27,7 @@
 <body>
     <header></header>
     <main>
-        <div class="d-flex justify-content-center align-items-center form-wrapper"><img class="position-absolute w-100 h-100" src="../assets/img/slider/3.jpg" style="filter: brightness(50%) contrast(70%);">
+        <div class="d-flex justify-content-center align-items-center form-wrapper"><img class="position-absolute w-100 h-100" src="/assets/img/slider/3.jpg?h=c246b393697337d0b39c649e4c9d201f" style="filter: brightness(50%) contrast(70%);">
             <form style="z-index:1;">
                 <div class="row search-type gap-md-3">
                     <div class="col-12 col-md-3">
@@ -65,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 p-0"><button class="btn btn-primary w-100" type="submit">Buscar inmuebles</button></div>
+                    <div class="col-12 p-0"><button class="btn btn-primary btn-lg w-100" type="submit">Buscar inmuebles</button></div>
                 </div>
             </form>
         </div>
@@ -267,19 +266,16 @@
             <div class="text-center text-white position-relative"><img class="img-fluid w-100 highlight-image" src="https://www.fortunebuilders.com/wp-content/uploads/2020/06/wholesale-deals-1.jpg" style="filter: brightness(110%) contrast(40%) saturate(200%);">
                 <div class="container text-start position-absolute highlight-content">
                     <h1>¡Encuentra tu Inmueble! </h1>
-                    <p style="max-width: 500px;">En ROMSAL buscar el inmueble de tus sueños es mucho mas fácil. Utiliza nuestro potente buscador para localizar la propiedad que mas se ajusta a tus necesidades. </p><button class="btn btn-primary" type="button">Buscar inmuebles</button>
+                    <p style="max-width: 500px;">En ROMSAL puedes buscar el inmueble de tus sueños es mucho mas fácil. Utiliza nuestro potente buscador para localizar la propiedad que mas se ajusta a tus necesidades. </p><button class="btn btn-primary" type="button">Buscar inmuebles</button>
                 </div>
             </div>
         </section>
     </main>
     <footer></footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/bs-init.js"></script>
+    <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="../assets/js/formatter/currency.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script src="../assets/js/moving-letters.js"></script>
+    <script src="/assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
 </body>
 
 </html>
