--- a/src/main/resources/META-INF/resources/assets/css/generic/cards.css
+++ b/src/main/resources/META-INF/resources/assets/css/generic/cards.css
@@ -27,3 +27,24 @@
 #videos {
 }
 
+#list img {
+  height: 300px;
+}
+
+.card-description::-webkit-scrollbar {
+  width: 5px;
+}
+
+.card-description::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.card-description::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,0.25);
+  border-radius: 50px;
+}
+
+.card-description::-webkit-scrollbar-thumb:hover {
+  background: rgba(0,0,0,0.5);
+}
+
