--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=28fcdefe8a87593f1f43b7d9951e0cba">
-    <link rel="stylesheet" href="assets/css/about.css?h=a09c004c68bf879cc04231cc1b6edf4b">
-    <link rel="stylesheet" href="assets/css/footer.css?h=e9b0850f22ad51fa74cf747a2998f8eb">
-    <link rel="stylesheet" href="assets/css/generic/cards.css?h=c1366984cb203dab7a99a26489902cee">
-    <link rel="stylesheet" href="assets/css/generic/fields.css?h=a3fd52f6785712ad3201dc899f0c34be">
-    <link rel="stylesheet" href="assets/css/generic/general.css?h=44dcaaed3318fe53593506dc316bb184">
-    <link rel="stylesheet" href="assets/css/generic/highlight.css?h=de10cb38c5475825bbac2117f770edd0">
+    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css?h=28fcdefe8a87593f1f43b7d9951e0cba">
+    <link rel="stylesheet" href="/assets/css/about.css?h=a09c004c68bf879cc04231cc1b6edf4b">
+    <link rel="stylesheet" href="/assets/css/footer.css?h=e9b0850f22ad51fa74cf747a2998f8eb">
+    <link rel="stylesheet" href="/assets/css/generic/cards.css?h=79e031c7500cf56655017d8aec0a455f">
+    <link rel="stylesheet" href="/assets/css/generic/fields.css?h=a3fd52f6785712ad3201dc899f0c34be">
+    <link rel="stylesheet" href="/assets/css/generic/general.css?h=44dcaaed3318fe53593506dc316bb184">
+    <link rel="stylesheet" href="/assets/css/generic/highlight.css?h=de10cb38c5475825bbac2117f770edd0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="assets/css/navbar.css?h=577b20b93b5424a25761882d234f6cc4">
-    <link rel="stylesheet" href="assets/css/scss/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
+    <link rel="stylesheet" href="/assets/css/navbar.css?h=577b20b93b5424a25761882d234f6cc4">
+    <link rel="stylesheet" href="/assets/css/scss/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>{#include navbar/}</header>
+    <header></header>
     <main>
         <section class="highlight">
             <div class="container">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5"><img style="width: 100%;height: 100%;" src="assets/img/brand.png?h=b5b92283e8806b1aec83c92998ca5681"></div>
+                <div class="col-md-5"><img style="width: 100%;height: 100%;" src="/assets/img/brand.png?h=b5b92283e8806b1aec83c92998ca5681"></div>
             </div>
         </div>
         <section class="text-center team-boxed">
@@ -74,19 +74,19 @@
                 </div>
                 <div class="row mt-5" data-aos="zoom-in" data-aos-duration="1000">
                     <div class="col my-2" data-bss-hover-animate="pulse">
-                        <div class="bg-white p-4"><img class="rounded-circle" src="assets/img/team/Luis%20Alejandro%20Romano.jpg?h=39d2eb8b23f126d2835147d14cf9940c">
+                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/Luis%20Alejandro%20Romano.jpg?h=39d2eb8b23f126d2835147d14cf9940c">
                             <h3 class="mt-4 fw-bold"><strong>Luis Romano</strong><br></h3><span class="text-uppercase title fw-bold">ENCARGADO DE OBRAS</span>
                             <div class="social my-2"><a class="text-decoration-none" href="#"><i class="material-icons d-block">mail_outline</i>ingluisromano@gmail.com</a></div>
                         </div>
                     </div>
                     <div class="col my-2" data-bss-hover-animate="pulse">
-                        <div class="bg-white p-4"><img class="rounded-circle" src="assets/img/team/Maria%20Alejandra.png?h=710b82dd593ed1d12ce7fe9b307a785d">
+                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/Maria%20Alejandra.png?h=710b82dd593ed1d12ce7fe9b307a785d">
                             <h3 class="mt-4 fw-bold"><strong>María Romano</strong></h3><span class="text-uppercase title fw-bold">ENCARGADA DE VENTAS</span>
                             <div class="social my-2"><a class="text-decoration-none" href="#"><i class="material-icons d-block">mail_outline</i>Maria.romano.salas@gmail.com</a></div>
                         </div>
                     </div>
                     <div class="col my-2" data-bss-hover-animate="pulse">
-                        <div class="bg-white p-4"><img class="rounded-circle" src="assets/img/team/Xiomara%20Salas.jpg?h=78fffc4adcaa1b6cc69064d8aeeeed05">
+                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/Xiomara%20Salas.jpg?h=78fffc4adcaa1b6cc69064d8aeeeed05">
                             <h3 class="mt-4 fw-bold"><strong>Xiomara Salas</strong><br></h3><span class="text-uppercase title fw-bold">GERENTE GENERAL </span>
                             <div class="social my-2"><a class="text-decoration-none" href="#"><i class="material-icons d-block">mail_outline</i>xiomara.salas@gmail.com</a></div>
                         </div>
@@ -95,11 +95,11 @@
             </div>
         </section>
     </main>
-    <footer>{#include footer/}</footer>
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js?h=1ff0a0bc7fcdd630c8e66c639cd2fc11"></script>
+    <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
+    <script src="/assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
 </body>
 
 </html>
