--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -93,7 +93,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h4 class="text-break d-flex card-title">{map.property.name}<i class="fas fa-star ms-auto ps-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="left" style="color: var(--bs-primary);" title="Destacada"></i></h4>
+                            <h4 class="text-break d-flex card-title">Nombre<i class="fas fa-star ms-auto ps-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="left" style="color: var(--bs-primary);" title="Destacada"></i></h4>
                             <h6 class="d-flex align-items-center card-subtitle mb-2"><i class="material-icons m-1">location_on</i>Ciudad</h6>
                             <ul class="list-group list-group-horizontal text-truncate bg-white d-flex">
                                 <li class="list-group-item border-0 p-2"><span><i class="fas fa-bed p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Habitaciones"></i>1</span></li>
@@ -101,10 +101,10 @@
                                 <li class="list-group-item border-0 p-2"><span><i class="fas fa-car-alt p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Parqueos"></i>1</span></li>
                                 <li class="list-group-item border-0 p-2"><span><i class="fas fa-ruler-combined p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Área"></i>1 m²</span></li>
                             </ul>
-                            <p>{map.property.description}</p>
+                            <p>Descripción</p>
                         </div>
                         <div class="card-footer d-flex">
-                            <h2 class="my-auto">US${map.property.price}</h2>
+                            <h2 class="my-auto">US$1</h2>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="mb-4">
                         <h4 class="section-title">Resumen</h4>
                         <hr>
-                        <p>{map.property.summary}</p>
+                        <p>. . .</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
